--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <span class="form__error">Имя в формате: Анна, Анна-Мария</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="\w+(-|.)?\w+((-|.)\w+)*@\w+\.\w{2,}" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
