--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                         <span class="form__error">Имя в формате: Анна, Анна-Мария</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="\w+(-|.)?\w+((-|.)\w+)*@\w+\.\w{2,}" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="\w+(-|.)?\w+((-|.)\w+)*@\w+\.\w{2,}" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="" minlength="18" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(\+7|8)\s?(9\d{2}|\(9\d{2}\))(\s|-)*(\d{7}|\d{3}-\d{2}-\d{2})" required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
